--- a/Container/dockerfile
+++ b/Container/dockerfile
@@ -1,10 +1,8 @@
 FROM amd64/python:3.9.16-bullseye
 
 RUN apt-get update && \
+    apt-get install -y default-mysql-client && \
     rm -rf var/lib/apt/lists/*
-
-RUN apt-get update && \
-    apt-get install -y default-mysql-client
 
 WORKDIR /app
 
@@ -13,7 +11,10 @@ COPY . .
 RUN pip install -U pip && \
     pip install --no-cache-dir -r requirements.txt 
 
-# 컨테이너 실행 시 시작되는 프로세스
-ENTRYPOINT ["python", "container_collect_data.py", "--db-host"]
+RUN chmod +x ./container_collect_data.py
 
-CMD ["localhost"]
+# ENTRYPOINT ["python", "./container_collect_data.py", "--db-host"]
+
+# CMD 
+
+# CMD ["steamspy-mysql"]
