230609 : 마참내 컨테이너 로그 안뜨는 이유 해결

--- a/Container/docker-compose.yaml
+++ b/Container/docker-compose.yaml
@@ -32,8 +32,9 @@ services:
     command: sh -c "while ! mysqladmin -u$MYSQL_ROOT_USER \
                       -p$MYSQL_ROOT_PASSWORD -h steamspy-mysql ping --silent; \
                       do sleep 1; done && 
-                      python container_collect_data.py" && \
-                      python check_time.py
+                      python check_time.py && \ 
+                      python -u container_collect_data.py"
+
 
 networks:
   default:
